# reconlify

./: .gitignore  recko_v4_architecture.md  recko_v4_schema.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/admin/: router.py
backend/app/api/v1/parse/: router.py
backend/app/api/v1/reconciliation/: router.py  schemas.py
backend/app/api/v1/reports/: router.py
backend/app/api/v1/upload/: router.py  schemas.py
backend/app/api/v1/vendors/: router.py
backend/app/core/: exceptions.py  logging.py  security.py  security_middleware.py
backend/app/db/: session.py
backend/app/db/repositories/: base.py  mismatches_repo.py  recon_results_repo.py  reports_repo.py  runs_repo.py  uploads_repo.py  vendors_repo.py
backend/app/services/parser/: column_mapper.py  detector.py  gst_parser.py  gstr2b.py  normalizer.py  purchase_register.py  schemas.py  validators.py
backend/app/services/reconciliation/: config_builder.py  duplicate_detector.py  metrics.py  mismatch_classifier.py  orchestrator.py  schemas.py
backend/app/services/reconciliation/engine/: base.py  pandas_engine.py  reconlify.py  registry.py
backend/app/services/report/: excel_generator.py
backend/app/services/reports/: excel_generator.py  pdf_generator.py
backend/app/services/storage/: supabase_storage.py
backend/app/workers/: worker_settings.py
backend/app/workers/tasks/: parse_task.py  recon_task.py  report_task.py
backend/migrations/: 003_recon_engine_tables.sql
backend/tests/: test_gst_parser.py  test_reconciliation_wrapper.py
recko-frontend/: middleware.ts  package-lock.json  package.json
recko-frontend/src/app/: layout.tsx
recko-frontend/src/app/dashboard/: page.tsx
recko-frontend/src/app/login/: page.tsx
(+6 files in other folders)
