[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recko-api"
version = "4.0.0"
description = "Recko v4 - GST Reconciliation & Audit Intelligence Platform API"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.18",
    # Async DB
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.36",
    # Validation & settings
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    # Auth
    "python-jose[cryptography]==3.3.0",
    "httpx<0.28.0",
    # Data processing
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "numpy==2.1.3",
    "rapidfuzz==3.10.1",
    # Storage
    "supabase==2.10.0",
    "boto3==1.35.74",
    # Job queue
    "arq==0.26.1",
    "redis==5.2.1",
    # Reporting
    "jinja2==3.1.4",
    "weasyprint==62.3",
    "xlsxwriter==3.2.0",
    # Email
    "resend==2.4.0",
    # Observability
    "sentry-sdk[fastapi]==2.19.2",
    "structlog==24.4.0",
    # Utilities
    "python-dateutil==2.9.0",
    "orjson==3.10.12",
    "tenacity==9.0.0",
    "pycountry==24.6.1",
    "reportlab>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx<0.28.0",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
